调整：精简部分代码